# MetrologyTestFramework

./: .gitignore  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  DESIGN_DOCUMENT.md  GEMINI.md  LICENSE  README.md  WORKLOG.md  project-handbook.md
cmake/: Dependencies.cmake
src/: CMakeLists.txt  framework_info.cpp  framework_info.h  main.cpp
tests/: CMakeLists.txt  test_framework_info.cpp
